bin/testsuite/tests/compiler/src/errors/compiler4042.swg
#global testerror "Err0735"
#test
{
    var a, b: [..] s32
    var x = a != b
}
